charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp-d
spec:
  replicas: 3 #create 3 pods 
  selector:
    matchLabels:
      app: webapp-d
  template:
    metadata:
      labels:
        app: webapp-d
    spec:
      containers:
      - name: webapp-d
        image: anhhavo/anhhavo:latest5.1.4
          #anhhavo/anhhavo:latest5.1.3  -> worked
        command: ["/usr/bin/python3", "/code/app.py"]
        ports:
        - name: health-port
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
