charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: LoadBalancer
  selector:
    app: webapp-d #Bind service to  pods named webapp-d
  ports:
  - port: 80 #Internal port to open
    targetPort: 8080 #Port that ingress can send messages to
